fix dark mode issues

--- a/src/Assets/styles/override.scss
+++ b/src/Assets/styles/override.scss
@@ -571,6 +571,11 @@ canvas {
 
 .my-listing-card {
   background: $bgColor1;
+  border-color: $borderColor1;
+}
+
+.modal-content {
+  background: $bgColor1;
 }
 
 /* Responsive Drop Video */
@@ -585,7 +590,7 @@ canvas {
 }
 
 .spinner-border {
-  color: $textColor2;
+  color: 'white';
 }
 
 /** Image component styling */
